--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
     "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.7.18",
     "yup": "^1.2.0"
   },
   "devDependencies": {
