--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ VITE_PROJECT_ID=back-audiophile
 VITE_STORAGE_BUCKET=back-audiophile.appspot.com
 VITE_MESSAGING_SENDER_ID=1057870050540
 VITE_APP_ID=1:1057870050540:web:042478e854daf195e021c9
+
+
+VITE_CLOUD_NAME=dgur5apfu
+VITE_CLOUD_API_KEY=779938362781346
+VITE_CLOUD_API_SECRET=VC8vDQ3lhlQLxU-_u0byS2EDzVg
