--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ VITE_APP_ID=1:1057870050540:web:042478e854daf195e021c9
 VITE_CLOUD_NAME=dgur5apfu
 VITE_CLOUD_API_KEY=779938362781346
 VITE_CLOUD_API_SECRET=VC8vDQ3lhlQLxU-_u0byS2EDzVg
+
+
+VITE_PUBLIC_KEY=APP_USR-5f375198-244e-4f3f-90bd-b1035e2ae431
